# agent_Y

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: release.yml
agent-y/: README.md  index.css  index.html  package-lock.json  package.json
agent-y/src/: App.tsx  AssistantPaper.tsx  Automations.tsx  Markdown.tsx  Settings.tsx  Skills.tsx  api.ts  index.css
agents/: README.md
cli/: main.py
core/: abort.py  engine.py  llm.py  loop.py  settings.py  store.py  types.py  weather.py
core/eval/: assistant_eval.py  compare.py  harness.py  improve.py  taskset.py  types.py
core/harness/: approval.py  context.py  fs_access.py
core/memory/: recall.py  reflect.py  store.py
desktop/: main.py
docs/: HANDOVER.md  PRD.md  code-study-cc.md  design.md  dev-setup.md  m1-issues.md  packaging.md  plan.md  research.md
evals/: README.md
packaging/: agenty.spec  icon.icns  make_icon.py
scripts/: build_app.sh  build_dmg.sh  demo_loop.py  docker-tunnel.sh
server/: app.py
skills/: README.md
tests/: helpers.py  test_anthropic_provider.py  test_approval.py  test_assistant.py  test_assistant_eval.py  test_coding.py  test_compare.py  test_context.py  test_desktop.py  test_diff.py  test_docker_sandbox.py  test_docker_unit.py  test_e2e_coding.py  test_engine.py  test_eval.py  test_langfuse.py  test_loop.py  test_memory.py  test_memory_integration.py  test_openai_provider.py  test_providers.py  test_role_models.py  test_scheduler.py  test_server.py  test_skills.py  test_smoke.py  test_subagent.py  test_tracer.py  test_weather.py  test_web.py
(+49 files in other folders)
