[project]
name = "agent-y"
version = "0.1.0"
description = "会编码、能自进化的个人桌面工作助手（Agent Y）"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40",
    "openai>=1.50",
    "pydantic>=2.7",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "keyring>=25",
    "docker>=7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]
obs = ["langfuse>=2.0"]
office = ["python-docx>=1.1", "python-pptx>=0.6", "openpyxl>=3.1"]
desktop = ["pywebview>=5.0", "pyinstaller>=6.0", "rumps>=0.4; sys_platform == 'darwin'"]

[project.scripts]
agenty = "cli.main:main"
agenty-desktop = "desktop.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "server*", "cli*", "desktop*"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]  # 只收 tests/；examples/ 里有故意失败的样例

[tool.ruff]
line-length = 100
target-version = "py312"
